<resources>
    <string name="app_name">Чё Почём</string>
    <string name="new_text">Новые</string>
    <string name="kategorii">Фильтр</string>
    <string name="moi_tovary">Мои</string>
    <string name="Foto">Фото</string>
    <string name="save">Сохранить</string>
    <string name="Delelete">Удалить?</string>
    <string name="banner_ad_unit_id">ca-app-pub-7908895047124036/9662015107</string>
     <string name="abaut_text">
         \n
        +++++
         \n
         © 2016 , Deomin Dmitriy
         \n
         E-mail:58627@bk.ru
        \n\n
        libraries used:
        \n\n
         * jsoup
         \n
         org.jsoup:jsoup:1.9.2
         \n
         \n
         * listviewanimations
         \n
         com.nhaarman.listviewanimations:lib-core:3.1.0@aar
         \n
         \n
         * supertoasts
         \n
         com.github.johnpersano:supertoasts:1.3.4@aar
         \n
         \n
        * picasso
         \n
         com.squareup.picasso:picasso:2.5.2
         \n
         \n
        * cropper
        \n
         com.theartofdev.edmodo:android-image-cropper:1.1.+
         \n
         \n
         * color-picker-view
         \n
         com.github.danielnilsson9:color-picker-view:1.4.0@aar
         \n
         \n
         * floatlabel
         \n
         com.iangclifton.android:floatlabel:1.0.4
         \n
         \n
         * supertooltips
         \n
         com.nhaarman.supertooltips:library:3.0.+
    </string>
    <string name="Statistika">Статистика</string>
    <string name="User_kabinet">Мой кабинет</string>
    <string name="Settings">Настройки</string>
    <string name="Abaut">О проге</string>
    <string name="Psevdonim">Псевдоним</string>
    <string name="Anonim">Аноним</string>
    <string name="Vvedite_comentariy">Введите коментарий</string>
    <string name="Komentariy">Коментарии:</string>
    <string name="Gotovo">Готово</string>
    <string name="Ggotovo">Готово</string>
    <string name="Vrashat">Вращать</string>
    <string name="Produkt_usluga">Продукт,услуга</string>
    <string name="Cena">Цена</string>
    <string name="Magazin">Магазин или адрес</string>
    <string name="Koment">Коментарий</string>
    <string name="Poisk">поиск</string>
    <string name="Close_program">Закрыть программу?</string>
    <string name="Save">Сохранить</string>
    <string name="Edit">Изменить</string>
    <string-array name="kategorii_tovarov_filtr">
        <item>Прочие товары</item>
        <item>Подукты питания</item>
        <item>Мебель</item>
        <item>Электронника</item>
        <item>Услуги</item>
        <item>Шмотьё</item>
        <item>Строительство и ремонт</item>
    </string-array>
    <string-array name="kategorii_tovarov_filtr_1">
        <item>Все товары</item>
        <item>Прочие товары</item>
        <item>Подукты питания</item>
        <item>Мебель</item>
        <item>Электронника</item>
        <item>Услуги</item>
        <item>Шмотьё</item>
        <item>Строительство и ремонт</item>
    </string-array>
</resources>