<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        android:elevation="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/menu_progi"
    android:visibility="visible"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:clickable="false">

        <dmitriy.deomin.how_much.libries.Button_new
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Statistika"
            android:id="@+id/button_statistika"
            android:layout_gravity="center_horizontal"
            android:onClick="statistika"
            android:background="@android:color/transparent" />

        <dmitriy.deomin.how_much.libries.Button_new
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/User_kabinet"
            android:id="@+id/button_user_kabinet"
            android:layout_gravity="center_horizontal"
            android:onClick="User_kabinet"
            android:background="@android:color/transparent" />

        <dmitriy.deomin.how_much.libries.Button_new
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Settings"
            android:id="@+id/button_setting"
            android:layout_gravity="center_horizontal"
            android:onClick="Clik_setting"
            android:background="@android:color/transparent" />

        <dmitriy.deomin.how_much.libries.Button_new
            android:text="@string/Abaut"
            android:id="@+id/button_abaut"
            android:onClick="Abaut"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center" />

    </LinearLayout>

    </android.support.v7.widget.CardView>

    </LinearLayout>